--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a class="nav-link" href="Contato.html">Contato</a>
       </li>
       <li class="evento">
-        <a class="nav-evento" style="color:orange" href="eventos.html">Eventos</a>
+        <a class="nav-evento" style="color:orange" href="https://www.sympla.com.br/workshop-com-a-chef-tiby-gabriel---comida-vegana-por-que-ter-em-seu-cardapio-__626655" target="_blank"> Eventos</a>
       </li>
     </ul>
     <form class="form-inline searchbar my-2 my-lg-0" action="busca" method="GET">
