--- a/Contato.html
+++ b/Contato.html
@@ -196,20 +196,7 @@
       </a>
 
   <div class="d-flex flex-column m-2 align-content-center">
-
-    <h5 class="text-center text-white mb-3">Assine nossa newsletter!</h5>
-
-    <form name="news" action="#" class="d-flex flex-column justify-content-start justify-content-md-center flex-md-row " netlify>
-      <div class="form-group mx-2">
-        <label class="sr-only">Nome Completo</label>
-        <input type="text" name="name" placeholder="Nome Completo" class="form-control">
-      </div>
-      <div class="form-group mx-2">
-        <label class="sr-only">Email</label>
-        <input type="email" name="email" placeholder="Seu email" class="form-control">
-      </div>
-      <button type="submit"  class="btn btn-success mx-auto mx-md-0 h-75"  data-toggle="modal" data-target="#newsConfirmation">Enviar</button>
-    </form>
+      <h5 class="text-center text-white mb-3">Confira nosso evento essa semana clicando <a style="color:orange" href="https://www.sympla.com.br/workshop-com-a-chef-tiby-gabriel---comida-vegana-por-que-ter-em-seu-cardapio-__626655" target="_blank"> aqui!</a></h5>
   </div>
 
     <div class="d-none d-lg-flex align-self-center mx-2 my-3">
