--- a/eventos.html
+++ b/eventos.html
@@ -78,6 +78,7 @@
   <div class="conteiner">
    <div class="box">
       <h1>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ?</h1> <br>
+      <img width:90% src="img/comida-Vegana_V2.jpg" alt="uma mulher comendo um prato saúdavel com a frase comida vegana por que ter no seu cardápio"></img>
       <i><h3>DESCRIÇÃO DO EVENTO</i><br>
           Se você tem interesse  em aprender como fazer, repassar para os seus clientes e degustar de uma deliciosa comida vegana, está no lugar certo!
           Venha para o primeiro Workshop Vegano da Chef Tiby Gabriel em parceria com o O Mercador Digital!
