--- a/eventos.html
+++ b/eventos.html
@@ -79,7 +79,7 @@
    <div class="box">
       <h1>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ?</h1> <br>
       <img src="img/comida-Vegana_V2.jpg" alt="uma mulher comendo um prato saúdavel com a frase comida vegana por que ter no seu cardápio" height="400px"></img> 
-      <i><h3>DESCRIÇÃO DO EVENTO</i><br>
+      <i><h4>DESCRIÇÃO DO EVENTO</i><br>
           Se você tem interesse  em aprender como fazer, repassar para os seus clientes e degustar de uma deliciosa comida vegana, está no lugar certo!
           Venha para o primeiro Workshop Vegano da Chef Tiby Gabriel em parceria com o O Mercador Digital!
           Programação:
@@ -90,9 +90,9 @@
           
          <b> Bora?! Te esperamos dia 29/08/2019, na rua Rua Batataes, 159, Espaço Gourmet, bairro: Jardim Paulista às 20:00 </b>
           
-          *Cada ingresso tem direito a um prato a ser degustado</h3>
+          *Cada ingresso tem direito a um prato a ser degustado</h4>
 
-          <div id="sympla-widget-626655" height="auto"></div> <script src="https://www.sympla.com.br/js/sympla.widget-pt.js/626655"></script>
+          <div id="sympla-widget-626655" height="auto" ></div> align-self-center<script src="https://www.sympla.com.br/js/sympla.widget-pt.js/626655"></script>
      </div>    
   </div>  
   <footer class="container-fluid d-flex flex-row flex-md-column-reverse flex-lg-row justify-content-between" style="background-color: #2a75b6;">
