--- a/eventos.html
+++ b/eventos.html
@@ -88,11 +88,11 @@
           - Networking com donos de restaurantes, funcionários, investidores, clientes e com a chef;
           - Muita alegria, comida boa e tudo isso sem matar um animal sequer! <br>
           
-         <b> Bora?! Te esperamos dia 29/08/2019, na rua Rua Batataes, 159, Espaço Gourmet, bairro: Jardim Paulista às 20:00 </b>
+          Bora?! Te esperamos dia 29/08/2019, na rua Rua Batataes, 159, Espaço Gourmet, bairro: Jardim Paulista às 20:00 
           
           *Cada ingresso tem direito a um prato a ser degustado</h4>
 
-          <div id="sympla-widget-626655" height="auto" ></div> align-self-center<script src="https://www.sympla.com.br/js/sympla.widget-pt.js/626655"></script>
+          <div id="sympla-widget-626655" height="auto" ></div><script src="https://www.sympla.com.br/js/sympla.widget-pt.js/626655"></script>
      </div>    
   </div>  
   <footer class="container-fluid d-flex flex-row flex-md-column-reverse flex-lg-row justify-content-between" style="background-color: #2a75b6;">
