--- a/eventos.html
+++ b/eventos.html
@@ -80,15 +80,15 @@
       <h1>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ?</h1> <br>
       <img src="img/comida-Vegana_V2.jpg" alt="uma mulher comendo um prato saúdavel com a frase comida vegana por que ter no seu cardápio" height="400px"></img> 
       <i><h4>DESCRIÇÃO DO EVENTO</i><br>
-          Se você tem interesse  em aprender como fazer, repassar para os seus clientes e degustar de uma deliciosa comida vegana, está no lugar certo!
-          Venha para o primeiro Workshop Vegano da Chef Tiby Gabriel em parceria com o O Mercador Digital!
-          Programação:
-          - Workshop personalizado com a Personal Chef  Tiby Gabriel (Programa Panelaço do João Gordo);
-          - Degustação* do (delicioso) prato principal, preparado na hora;
-          - Networking com donos de restaurantes, funcionários, investidores, clientes e com a chef;
+          Se você tem interesse  em aprender como fazer, repassar para os seus clientes e degustar de uma deliciosa comida vegana, está no lugar certo! <br>
+          Venha para o primeiro Workshop Vegano da Chef Tiby Gabriel em parceria com o O Mercador Digital! <br>
+          Programação: <br>
+          - Workshop personalizado com a Personal Chef  Tiby Gabriel (Programa Panelaço do João Gordo); <br>
+          - Degustação* do (delicioso) prato principal, preparado na hora; <br>
+          - Networking com donos de restaurantes, funcionários, investidores, clientes e com a chef; <br>
           - Muita alegria, comida boa e tudo isso sem matar um animal sequer! <br>
           
-          Bora?! Te esperamos dia 29/08/2019, na rua Rua Batataes, 159, Espaço Gourmet, bairro: Jardim Paulista às 20:00 
+          Bora?! <br>Te esperamos dia 29/08/2019, na rua Rua Batataes, 159, Espaço Gourmet, bairro: Jardim Paulista às 20:00 <br>
           
           *Cada ingresso tem direito a um prato a ser degustado</h4>
 
