--- a/eventos.html
+++ b/eventos.html
@@ -77,8 +77,8 @@
  
   <div class="conteiner">
    <div class="box">
-      <h1>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ?</h1> <br>
-      <img src="img/comida-Vegana_V2.jpg" alt="uma mulher comendo um prato saúdavel com a frase comida vegana por que ter no seu cardápio" height="400px"></img> 
+     <p><h1>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ?</h1> <br>
+      <img src="img/tiby_img.jpg" alt="uma mulher sentada com 3 pratos de comida vegana na mesa" width="auto" height="400px"></img> 
       <i><h5>DESCRIÇÃO DO EVENTO</i><br>
           Se você tem interesse  em aprender como fazer, repassar para os seus clientes e degustar de uma deliciosa comida vegana, está no lugar certo!
           Venha para o primeiro Workshop Vegano da Chef Tiby Gabriel em parceria com o O Mercador Digital! <br>
@@ -92,7 +92,7 @@
           
           Bora?!Te esperamos dia 29/08/2019, na rua Rua Batataes, 159, Espaço Gourmet, bairro: Jardim Paulista às 20:00 <br>
           <br>
-          *Cada ingresso tem direito a um prato a ser degustado</h5>
+          *Cada ingresso tem direito a um prato a ser degustado</h5></p>
 
           <div id="sympla-widget-626655" height="auto" ></div><script src="https://www.sympla.com.br/js/sympla.widget-pt.js/626655"></script>
      </div>    
