--- a/eventos.html
+++ b/eventos.html
@@ -75,8 +75,8 @@
     </div>
   </nav>
  
-  <div class="conteiner">
-   <div class="box">
+  <div class="container d-flex flex-wrap justify-content-around my-5">
+    <div class="card my-3" style="width: 60rem;">
      <p><h1>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ?</h1> <br>
       <img src="img/tiby_img.jpg" alt="uma mulher sentada com 3 pratos de comida vegana na mesa" width="auto" height="400px"></img> 
       <i><h5>DESCRIÇÃO DO EVENTO</i><br>
