--- a/eventos.html
+++ b/eventos.html
@@ -77,7 +77,7 @@
  
   <div class="container d-flex flex-wrap justify-content-around my-5">
     <div class="card my-3" style="width: 60rem;">
-     <p class="card-text text-center> <h1> Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ?</h1> <br> </p>
+     <p> <b>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ? </b> <br> </p>
       <img src="img/tiby_img.jpg" alt="uma mulher sentada com 3 pratos de comida vegana na mesa" width="auto" height="400px"></img> 
       <p class="card-text justify-text"> <i>DESCRIÇÃO DO EVENTO</i><br>
           Se você tem interesse  em aprender como fazer, repassar para os seus clientes e degustar de uma deliciosa comida vegana, está no lugar certo!
@@ -97,7 +97,7 @@
     
 
       <div class="card my-3" style="width: 30rem;">
-         <b>     Não fique de fora, compre já seu ingresso aqui mesmo: </b>
+         <b> Não fique de fora, compre já seu ingresso aqui mesmo: </b>
           <div id="sympla-widget-626655" height="auto" ></div><script src="https://www.sympla.com.br/js/sympla.widget-pt.js/626655"></script>
       </div>
       
