--- a/eventos.html
+++ b/eventos.html
@@ -79,7 +79,7 @@
     <div class="card my-3" style="width: 55rem;">
      <p> <h2><b>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ? </b> </h2> <br> </p>
       <img src="img/tiby_img.jpg" alt="uma mulher sentada com 3 pratos de comida vegana na mesa" width="95%" height="400px"></img> <br>
-      <p class="card-text justify-text"> <i>DESCRIÇÃO DO EVENTO</i><br>
+      <p class="card-text text-center"> <i>DESCRIÇÃO DO EVENTO</i><br>
           Se você tem interesse  em aprender como fazer, repassar para os seus clientes e degustar de uma deliciosa comida vegana, está no lugar certo!
           Venha para o primeiro Workshop Vegano da Chef Tiby Gabriel em parceria com o O Mercador Digital! <br>
           <br>
