--- a/eventos.html
+++ b/eventos.html
@@ -76,8 +76,8 @@
   </nav>
  
   <div class="container d-flex flex-wrap justify-content-around my-5">
-    <div class="card my-3" style="width: 55rem;">
-     <p class="card-text text-center"> <h2><b>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ? </b> </h2> <br> </p>
+    <div class="card my-3" style="width: 60rem;">
+     <p class="card-text text-center"><b>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ? </b><br> </p>
       <img src="img/tiby_img.jpg" alt="uma mulher sentada com 3 pratos de comida vegana na mesa" width="auto" height="400px"></img> <br>
       <p class="card-text text-center"> <i>DESCRIÇÃO DO EVENTO</i><br>
           Se você tem interesse  em aprender como fazer, repassar para os seus clientes e degustar de uma deliciosa comida vegana, está no lugar certo!
