--- a/eventos.html
+++ b/eventos.html
@@ -77,7 +77,7 @@
  
   <div class="container d-flex flex-wrap justify-content-around my-5">
     <div class="card my-3" style="width: 60rem;">
-     <p class="card-text text-center"><b>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ? </b><br> </p>
+     <h2 class="text-center"><b>Workshop com a Chef Tiby Gabriel - Comida Vegana por que ter em seu cardápio ? </b><br> </h2>
       <img src="img/tiby_img.jpg" alt="uma mulher sentada com 3 pratos de comida vegana na mesa" width="auto" height="400px"></img> <br>
       <p class="card-text text-center"> <i>DESCRIÇÃO DO EVENTO</i><br>
           Se você tem interesse  em aprender como fazer, repassar para os seus clientes e degustar de uma deliciosa comida vegana, está no lugar certo!
@@ -96,7 +96,7 @@
     
 
       <div class="card my-3" style="width: 30rem;">
-          <p class="card-text text-center"><b><h5> Não fique de fora, compre já seu ingresso aqui mesmo: </b> </p> </h5>
+          <p class="card-text text-center"><b><h5> Não fique de fora, compre já seu ingresso aqui: </b> </p> </h5>
           <div id="sympla-widget-626655" height="auto" ></div><script src="https://www.sympla.com.br/js/sympla.widget-pt.js/626655"></script>
       </div>
       
