--- a/eventos.html
+++ b/eventos.html
@@ -96,7 +96,7 @@
     
 
       <div class="card my-3" style="width: 30rem;">
-          <p class="card-text text-center"><b><h5> Não fique de fora, compre já seu ingresso aqui: </b> </p> </h5>
+          <h5 class="text-center"><b>Não fique de fora, compre já seu ingresso: </b> </p> </h5>
           <div id="sympla-widget-626655" height="auto" ></div><script src="https://www.sympla.com.br/js/sympla.widget-pt.js/626655"></script>
       </div>
       
